kubernetes/services/media/flaresolverr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media 
spec:
  ports:
  - name: web
    port: 8191
  selector:
    app: flaresolverr
