kubernetes/services/media/flaresolverr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`flaresolverr.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: flaresolverr
      port: 8191
  tls:
    secretName: flaresolverr-certificate-secret
